# user-permission

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
crates/user-permission/: Cargo.toml
crates/user-permission-core/: Cargo.toml
crates/user-permission-core/migrations/: 0001_init.sql  0002_groups_is_admin.sql  0003_service_clients.sql  0004_users_token_version.sql
crates/user-permission-core/src/: database.rs  error.rs  group.rs  lib.rs  password.rs  relay.rs  service_client.rs  token.rs  user.rs
crates/user-permission-core/tests/: integration.rs
crates/user-permission/src/: api.rs  auth.rs  error.rs  lib.rs  login_guard.rs  main.rs  state.rs  webui.rs
crates/user-permission/templates/: base.html  group_detail.html  group_row.html  groups.html  index.html  login.html  me.html  member_row.html  register.html  user_edit.html  user_row.html  users.html
crates/user-permission/tests/: cross_server.rs  directory_visibility.rs  login_rate_limit.rs  relay_admin.rs  relay_get_by_username.rs  relay_introspect.rs  service_client.rs
