[workspace]
resolver = "2"
members = [
    "crates/user-permission-core",
    "crates/user-permission",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["mokuichi147 <38586357+Mokuichi147@users.noreply.github.com>"]
repository = "https://github.com/mokuichi147/user-permission"
homepage = "https://github.com/mokuichi147/user-permission"

[workspace.dependencies]
user-permission-core = { path = "crates/user-permission-core", version = "0.2.3" }
user-permission = { path = "crates/user-permission", version = "0.2.3" }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }
jsonwebtoken = "9"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
askama = "0.12"
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1"
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
